[tool.poetry]
name = "reporting_tool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
pandas = "^1.1.1"
jinja2 = "^2.11.2"
argparse = "^1.4.0"
numpy = "^1.19.1"
weasyprint = "^51"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
